rather omit lanczos than capping windows

capping shadows is seen as bug (and is ugly and
because of the non lanczos transition causes visual
flicker) so if the window+shadows extends the buffer,
lanczos is simply not possible.

BUG: 314838
FIXED-IN: 4.11
REVIEW: 111425